reworked subarray health display to be usable, better repainting some d3 displays when resizing the window

--- a/app/health/subarray-health/subarray-health.html
+++ b/app/health/subarray-health/subarray-health.html
@@ -17,7 +17,7 @@
             <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
         </div>
     </div>
-    <subarray-health-map redraw-charts="vm.redraw"></subarray-health-map>
+    <subarray-health-map style="overflow: hidden" redraw-charts="vm.redraw"></subarray-health-map>
 
     <div class="treemap-tooltip" style="visibility: hidden; background-color: #ffffff"></div>
 </div>
