--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -57,7 +57,7 @@
             <div layout="column" flex>
                 <md-input-container flex>
                     <label>Log Message</label>
-                    <textarea rows="5" columns="1" md-maxlength="150" ng-model="ulog.userlog_content"></textarea>
+                    <textarea rows="5" columns="1" ng-model="ulog.userlog_content"></textarea>
                 </md-input-container>
             </div>
         </div>
