--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('video')">
+                    <md-item-content ng-show="$root.showVideoLinks" class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('video')">
                         <md-button flex><span class="fa fa-video-camera"></span><span>Video</span></md-button>
                     </md-item-content>
                 </md-item>
