--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -1,6 +1,6 @@
 <div flex layout="column" style="min-width: 1220px; min-height: 850px; margin-bottom: 8px; margin-top: 4px;" ng-controller="SubArrayObservationsDetail as vm">
     <div layout="row" layout-align="center center" ng-class="{'maintenance-bg':subarray.maintenance}"
-         style="margin: 0 8px" md-theme="{{themePrimaryButtons}}">
+         style="margin: 0 8px; min-height: 50px;" md-theme="{{themePrimaryButtons}}">
         <md-button style="margin: 0" title="Schedule Block Drafts"
                    ng-click="$root.stateGo('scheduler.drafts')">
             <span>SB Drafts</span>
