--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -1,24 +1,25 @@
 <div layout="column" flex ng-controller="SensorListCtrl as vm">
 
-    <div flex layout="row" style="margin: 16px;">
-        <div layout="column" style="min-width:150px;">
+    <div flex layout="row" style="margin: 8px;">
+        <div layout="column" style="min-width:170px;max-width:170px; min-height: 1300px; max-height: 1300px">
             <div layout="column" ng-repeat="node in vm.nodes | orderBy:node:true track by $index"
-                class="md-whiteframe-z1" style="margin-bottom: 8px;">
+                class="md-whiteframe-z1" style="margin-bottom: 8px; min-height: 350px;">
                 <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium" layout="row" layout-align="center center">
                     <span>{{node}}</span>
                 </md-toolbar>
-                <div flex style="overflow: auto">
+                <div style="overflow: auto; direction: rtl">
                     <div ng-class="{'active-sensor-list-resource':vm.resourceSensorsBeingDisplayed === resource.name}"
                          ng-repeat="resource in vm.resourcesNames | filter:{'node':node} | orderBy:'name' track by $index"
                          style="position: relative">
-                        <md-button class="resource-root-item" ng-click="vm.listResourceSensors(resource.name);">
+                        <md-button class="resource-root-item" ng-click="vm.listResourceSensors(resource.name);"
+                            style="text-align: right">
                             {{resource.name}}
                         </md-button>
                     </div>
                 </div>
             </div>
         </div>
-        <div flex class="resource-sensors-list" layout="column" style="max-height: 100%; min-height: 100%">
+        <div flex class="resource-sensors-list" layout="column" style="max-height: 100%; min-height: 100%;">
             <md-toolbar class="md-whiteframe-z1" style=" min-height: 60px">
                 <div layout="row" layout-align="start center" style="margin-left: 16px; margin-top: 16px">
                     <span flex>Sensors {{' - ' + vm.resourceSensorsBeingDisplayed | uppercase}}</span>
@@ -71,9 +72,9 @@
                     </span>
                 </div>
             </md-toolbar>
-            <md-virtual-repeat-container style="padding: 8px 0; overflow: auto; min-height:1200px;max-height:1200px;" class="md-whiteframe-z1">
+            <md-virtual-repeat-container flex style="padding: 8px 0; min-height: 1300px; max-height: 1300px; margin-bottom: 8px" class="md-whiteframe-z1">
                 <div md-virtual-repeat="sensor in sensors = (vm.sensorsToDisplay | filter:filterByNotNominal | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:vm.sensorsOrderBy.value:vm.sensorsOrderBy.reverse)"
-                     class="resource-sensor-item" md-item-size="20"
+                     class="resource-sensor-item"
                     ng-click="vm.plotLiveSensorFeed(sensor, sensor.selectedForChart); sensor.selectedForChart = !sensor.selectedForChart;"
                     ng-class="{'selected-for-chart-row': sensor.selectedForChart}" layout="row" layout-align="start center">
                     <span title="{{sensor.description}}" class="resource-sensor-name">{{sensor.name}}</span>
@@ -163,7 +164,7 @@
             </md-menu>
         </md-toolbar>
         <md-chips flex class="custom-chips" ng-model="vm.sensorsPlotNames" md-theme="{{themePrimaryButtons}}"
-                md-on-remove="vm.chipRemoved($chip)" md-on-append="vm.chipAppended($chip)" style="margin: 2px">
+                md-on-remove="vm.chipRemoved($chip)" md-on-add="vm.chipAppended($chip)" style="margin: 2px">
                 <md-autocomplete
                     md-search-text="vm.chipsSearchText"
                     md-items="item in vm.chipsQuerySearch(vm.chipsSearchText)"
