--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -81,7 +81,7 @@
                     <div ng-click="vm.setSelectedScheduleDraft(item)"
                          ng-class="{'selected-draft-schedule-row': item.id_code === vm.selectedScheduleDraft.id_code}"
                          class="schedule-draft-item" layout="row" layout-align="start center" style="max-height: 38px; padding: 0 4px" >
-                        <md-progress-linear ng-if="item.verification_state === 'VERIFYING'" class="md-primary"
+                        <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary"
                                             md-mode="indeterminate"
                                             style="position: absolute; left: 0; right: 0; margin-top: -5px;">
                         </md-progress-linear>
