used static subarray sensor values from monitor connection; delay load cam-components version and build sensors; fixes for subarray health view; sensor graph date time parsing when entering date with keyboard

--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -2,7 +2,7 @@
 
     <div flex class="md-whiteframe-z2" layout="column" style="min-height: 600px;">
         <md-toolbar class="md-whiteframe-z1" style="padding:0;">
-            <div style="align-items: center;" layout="row" md-theme="{{themePrimaryButtons}}">
+            <div style="align-items: center; min-height: 48px" layout="row" md-theme="{{themePrimaryButtons}}">
                 <span flex ng-init="vm.selectAllAlarms = false" ng-click="vm.toggleSelectAllAlarms()"
                       title="Select All Alarms" class="unselectable"
                       style="margin-left: 16px; font-size:22px; cursor: pointer; font-weight: bold;">
