added min-height styles for scheduler pages

--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -1,7 +1,7 @@
 <div flex layout="column" style="min-width: 1015px; min-height: 860px; margin-top: 8px;"
      ng-controller="SubArrayExecutorOverview as vm">
 
-    <div layout="row" layout-align="center center" style="margin: 0 8px" md-theme="{{themePrimaryButtons}}">
+    <div layout="row" layout-align="center center" style="margin: 0 8px; min-height: 50px;" md-theme="{{themePrimaryButtons}}">
         <md-button style="margin: 0"
                    title="Schedule Block Drafts"
                    ng-click="$root.stateGo('scheduler.drafts')">
