--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -1,7 +1,7 @@
 <div flex layout="column" style="min-width: 1260px; min-height: 500px; max-height: 100%; margin: 8px 0"
      ng-controller="SbDraftsCtrl as vm">
 
-    <div layout="row" layout-align="center center" style="margin: 0 8px" md-theme="{{themePrimaryButtons}}">
+    <div layout="row" layout-align="center center" style="margin: 0 8px; min-height: 50px;" md-theme="{{themePrimaryButtons}}">
         <md-button style="border: 8px solid #4CAF50; border-radius: 4px; margin: -1px"
                    title="Schedule Block Drafts"
                    ng-click="$root.stateGo('scheduler.drafts')">
