--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
                         </div>
                     </md-item-content>
                 </md-item>
-                <md-item ng-if="$root.currentUser.req_role === 'lead_operator'">
+                <md-item>
                     <md-item-content style="padding-bottom: 8px;" ng-click="vm.sideNavStateGo('cam-components')">
                         <div class="menu-item" layout="row" layout-align="start center">
                             <md-button flex><span class="fa fa-cubes"></span><span>CAM Components</span></md-button>
                         </div>
                     </md-item-content>
                 </md-item>
-                <md-item ng-if="$root.currentUser.req_role === 'lead_operator'">
+                <md-item>
                     <md-item-content style="padding-bottom: 8px;" ng-click="vm.sideNavStateGo('process-control')">
                         <div class="menu-item" layout="row" layout-align="start center">
                             <md-button flex><span class="fa fa-wrench"></span><span>Process Control</span></md-button>
