--- a/app/process-control/process-control.html
+++ b/app/process-control/process-control.html
@@ -1,5 +1,5 @@
 <div layout="row" ng-controller="ProcessControlCtrl as vm">
-    <div ng-repeat="nm_key in $root.objectKeys(vm.detailedProcesses) | orderBy:nm_key track by nm_key" style="padding: 8px; min-width: 320px; max-width: 320px">
+    <div ng-repeat="nm_key in $root.objectKeys(vm.detailedProcesses) | orderBy:nm_key track by nm_key" style="margin: 8px; min-width: 320px; max-width: 320px">
         <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium" layout="row" layout-align="start center"
                     ng-init="vm[nm_key + 'showDetails'] = true">
             <span flex ng-init="vm[nm_key + 'showProcList'] = true"
@@ -25,16 +25,16 @@
                     <span ng-show="vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" class="green-color" style="width: 160px; margin: 0;"><b>{{key | uppercase}}</b></span>
 
                     <div layout="row" style="position: absolute; right: 0; top: 0">
-                        <md-button ng-show="!vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value && key !== 'None'" ng-click="vm.startProcess(nm_key, key); $event.stopPropagation()" title="Start Process">
+                        <md-button ng-show="vm.lead_op && !vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value && key !== 'None'" ng-click="vm.startProcess(nm_key, key); $event.stopPropagation()" title="Start Process">
                             <i class="fa fa-play"></i>
                         </md-button>
-                        <md-button ng-show="vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" ng-click="vm.restartProcess(nm_key, key); $event.stopPropagation()" title="Restart Process">
+                        <md-button ng-show="vm.lead_op && vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" ng-click="vm.restartProcess(nm_key, key); $event.stopPropagation()" title="Restart Process">
                             <i class="fa fa-refresh"></i>
                         </md-button>
-                        <md-button ng-show="vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" ng-click="vm.killProcess(nm_key, key); $event.stopPropagation()" title="Kill Process">
+                        <md-button ng-show="vm.lead_op && vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" ng-click="vm.killProcess(nm_key, key); $event.stopPropagation()" title="Kill Process">
                             <i class="fa fa-remove"></i>
                         </md-button>
-                        <md-button ng-show="vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" ng-click="vm.stopProcess(nm_key, key); $event.stopPropagation()" title="Stop Process">
+                        <md-button ng-show="vm.lead_op && vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" ng-click="vm.stopProcess(nm_key, key); $event.stopPropagation()" title="Stop Process">
                             <i class="fa fa-stop"></i>
                         </md-button>
                     </div>
