--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 <script src="app/scheduler/observations/observations-detail.js"></script>
 <script src="app/scheduler/observations/observations-overview.js"></script>
 <script src="app/userlogs/userlogs.js"></script>
+<script src="app/userlogs/userlog-tags.js"></script>
 <script src="app/process-control/process-control.js"></script>
 <script src="app/cam-components/cam-components.js"></script>
 <script src="app/device-status/device-status.js"></script>
