userlog-tags display finalised

--- a/index.html
+++ b/index.html
@@ -233,6 +233,11 @@
                         <md-button flex><span class="fa fa-pencil-square-o"></span><span>User Logs</span></md-button>
                     </md-item-content>
                 </md-item>
+                <md-item ng-show="$root.expertUser">
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('userlog-tags')">
+                        <md-button flex><span class="fa fa-tag"></span><span>User Log Tags</span></md-button>
+                    </md-item-content>
+                </md-item>
                 <md-item>
                     <md-item-content ng-show="$root.showVideoLinks" class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('video')">
                         <md-button flex><span class="fa fa-video-camera"></span><span>Video</span></md-button>
