--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -3,59 +3,51 @@
     <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
         <span>User Log Editor</span>
     </md-toolbar>
-    <md-dialog-content style="padding: 12px;" layout="column" md-theme="{{$root.themePrimaryButtons}}">
+    <md-dialog-content style="padding: 12px; height: 410px" md-theme="{{$root.themePrimaryButtons}}" layout="column">
         <div layout="row">
-            <div layout="row" layout-align="center center" style="min-width: 220px;">
-                <md-input-container flex md-no-float style="margin-top: 3px; padding: 0;">
+            <div layout="row" layout-align="start center" style="min-width: 220px; padding-top: 20px;">
+                <md-input-container flex style="height: 36px; max-width: 135px; margin: 0; padding: 0;">
                     <input flex type="text" ng-change="onTimeChange()"
-                           data-ng-model="ulog.start_time" placeholder="Start Date"
-                           title="Start Date 'HH:mm:ss yyyy-MM-dd'"
-                           ng-click="vm.showDatePicker = !vm.showDatePicker; vm.showEndDatePicker = false; $event.stopPropagation()"/>
+                           data-ng-model="start_time" placeholder="Start Date"
+                           title="Start Date 'HH:mm:ss yyyy-MM-dd'"/>
                 </md-input-container>
-                <span>UTC</span>
-                <md-button class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 40px; height: 40px;"
+                <md-button class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 36px; height: 36px;"
                            ng-click="vm.showDatePicker = !vm.showDatePicker; vm.showEndDatePicker = false; $event.stopPropagation()">
                     <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
                 </md-button>
                 <datetimepicker ng-show="vm.showDatePicker" ng-init="vm.showDatePicker = false"
                                 class="datepickerMenu md-whiteframe-z1"
-                                data-ng-model="ulog.start_time" style="position: absolute; left: 16px; top: 122px"
+                                data-ng-model="start_time" style="position: absolute; left: 16px; top: 122px"
                                 data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown2&apos; }"
-                                data-on-set-time="vm.showDatePicker = false; onTimeSet(ulog.start_time, ulog, 'start_time')"></datetimepicker>
+                                data-on-set-time="vm.showDatePicker = false; onTimeSet(start_time, 'start_time')"></datetimepicker>
             </div>
-            <div flex layout="row" layout-align="center center">TO</div>
-            <div layout="row" layout-align="center center" style="min-width: 220px;">
-                <md-input-container flex md-no-float style="margin-top: 3px; padding: 0;">
+            <div flex layout="row" layout-align="center center"></div>
+            <div layout="row" layout-align="start center" style="min-width: 220px; padding-top: 20px;">
+                <md-input-container flex style="height: 36px; max-width: 135px; margin: 0; padding: 0;">
                     <input flex type="text" ng-change="onTimeChange()"
-                           data-ng-model="ulog.end_time" placeholder="End Date"
-                           title="End Date 'HH:mm:ss yyyy-MM-dd'"
-                           ng-click="vm.showEndDatePicker = !vm.showEndDatePicker; vm.showDatePicker = false; $event.stopPropagation()"/>
+                           data-ng-model="end_time" placeholder="End Date"
+                           title="End Date 'HH:mm:ss yyyy-MM-dd'"/>
                 </md-input-container>
-                <span>UTC</span>
-                <md-button class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 40px; height: 40px;"
+                <md-button class="md-icon-button" style="margin-left: 0; margin-top: 3px; width: 36px; height: 36px;"
                            ng-click="vm.showEndDatePicker = !vm.showEndDatePicker; vm.showDatePicker = false; $event.stopPropagation()">
                     <md-icon class="fa" md-font-icon="fa-calendar"></md-icon>
                 </md-button>
                 <datetimepicker ng-show="vm.showEndDatePicker" ng-init="vm.showEndDatePicker = false"
-                                data-ng-model="ulog.end_time" style="position: absolute; right: 16px; top: 122px"
+                                data-ng-model="end_time" style="position: absolute; right: 16px; top: 122px"
                                 class="datepickerMenu md-whiteframe-z1"
                                 data-datetimepicker-config="{ dropdownSelector: &apos;#dropdown4&apos; }"
-                                data-on-set-time="vm.showEndDatePicker = false; onTimeSet(ulog.end_time, ulog, 'end_time')"></datetimepicker>
+                                data-on-set-time="vm.showEndDatePicker = false; onTimeSet(end_time, 'end_time')"></datetimepicker>
             </div>
         </div>
-        <div>
-        </div>
-        <div layout="row">
-            <div layout="column" flex>
-                <md-input-container flex>
-                    <label>Log Message</label>
-                    <textarea rows="5" columns="1" md-maxlength="150" ng-model="ulog.userlog_content"></textarea>
-                </md-input-container>
-            </div>
+        <div class="md-whiteframe-z1" style="margin: 8px 0" flex>
+            <md-input-container style="margin: 16px 0;" class="md-block" flex>
+                <label>Log Content</label>
+                <textarea md-select-on-focus rows="6" md-maxlength="1000" ng-model="userlog_content"></textarea>
+            </md-input-container>
         </div>
 
-        <div layout="row" layout-align="start center" flex>
-        <md-chips ng-model="selectedTags" md-autocomplete-snap md-require-match flex>
+        <div layout="row" layout-align="start center" class="md-whiteframe-z1">
+        <md-chips ng-model="selectedTags" md-autocomplete-snap md-require-match="true" flex>
             <md-autocomplete
                 md-search-text="searchText"
                 md-items="item in querySearch(searchText)"
@@ -82,7 +74,7 @@
         </md-button>
         <div ng-init="toggleTags = false" ng-show="toggleTags" id="replyForm">
             <div id="vertical-container" class="md-whiteframe-z3 tag-popup-list">
-                <div ng-repeat="listed_tag in tags track by $index" class="repeated-item" flex ng-click="add_tag_from_list(listed_tag)">
+                <div ng-repeat="listed_tag in tags | orderBy:'name' track by $index" class="repeated-item" flex ng-click="addTagFromList(listed_tag)">
                     {{listed_tag.name}}
                 </div>
             </div>
@@ -94,22 +86,19 @@
             <input file-model="myFile" type="file" name="files[]" multiple/>
         </div>
         <div layout="column">
-            <div ng-repeat="attach in ulog.metadata" style="height: 32px" layout="row" layout-align="space-between center">
+            <div ng-repeat="attach in metadata" style="height: 32px" layout="row" layout-align="space-between center">
                 <span flex>{{attach.m_name}}</span>
                 <span flex="10" style="margin-left: 4px;" class="fa fa-download" ng-click="getFile(attach.m_val, attach.m_name, ulog.id)"></span>
                 <md-checkbox flex="10" ng-checked="exists(attach.m_name, metadata_to_del)" ng-click="toggle(attach.m_name, metadata_to_del)">del?</md-checkbox>
             </div>
         </div>
     </md-dialog-content>
-    <div class="md-actions" md-theme="{{$root.themePrimaryButtons}}">
+    <md-dialog-actions layout="row">
         <div ng-show ="endDateTimeError" style="color:red;">
             End date cannot be before start date!
         </div>
-        <md-button ng-click="hide()" class="md-primary md-raised">
-            Cancel
-        </md-button>
-        <md-button ng-click="add()" class="md-primary md-raised" ng-disabled="endDateTimeError">
-            Submit Log
-        </md-button>
+        <md-button ng-click="hide()">Cancel</md-button>
+        <md-button ng-click="add()" ng-disabled="endDateTimeError">Submit</md-button>
+    </md-dialog-actions>
     </div>
 </md-dialog>
