refactoring userlogs WIP

--- a/app/userlogs/userlog-reports.html
+++ b/app/userlogs/userlog-reports.html
@@ -112,7 +112,7 @@
                         <span style="width: 130px">{{rlog.name}}</span>
                         <span style="width: 150px">{{rlog.start_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
                         <span style="width: 150px">{{rlog.end_time | date:'yyyy-MM-dd HH:mm:ss'}}</span>
-                        <span flex>{{rlog.userlog_content}}</span>
+                        <span flex>{{rlog.content}}</span>
                         <span class="md-caption" ng-show="rlog.attachment_count > 0">
                             {{rlog.attachment_count}}
                             <md-icon class="fa" md-font-icon="fa-paperclip"></md-icon>
