--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -42,7 +42,7 @@
         <div class="md-whiteframe-z1" style="margin: 8px 0" flex>
             <md-input-container style="margin: 16px 0;" class="md-block" flex>
                 <label>Log Content</label>
-                <textarea md-select-on-focus rows="6" md-maxlength="1000" ng-model="userlog_content"></textarea>
+                <textarea md-select-on-focus rows="6" md-maxlength="1000" ng-model="content"></textarea>
             </md-input-container>
         </div>
 
