--- a/app/userlogs/userlogpreview.tmpl.html
+++ b/app/userlogs/userlogpreview.tmpl.html
@@ -26,7 +26,7 @@
         <div layout="row">
                 <md-input-container flex>
                     <label>Log Message</label>
-                    <textarea rows="5" columns="1" md-maxlength="150" ng-model="ulog.userlog_content" readonly></textarea>
+                    <textarea rows="5" columns="1" md-maxlength="150" ng-model="ulog.content" readonly></textarea>
                 </md-input-container>
         </div>
 
